--- a/views/survey_match_templates.xml
+++ b/views/survey_match_templates.xml
@@ -1,48 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
-    <!-- Template for match following questions in survey -->
-    <template id="match_following_question_template" name="Match Following Question">
-        <div class="js_match_following match_following_container" 
-             t-att-data-question-id="question.id">
+    <!-- Define a simple template for match following questions -->
+    <template id="match_following_question_template">
+        <div class="js_match_following match_following_container">
             <div class="row">
                 <div class="col-md-6">
                     <h5>Items</h5>
                     <div class="o_match_questions">
-                        <t t-foreach="question.match_following_pairs" t-as="pair">
-                            <div class="o_match_item" t-att-data-pair-id="pair.id" t-att-data-score="pair.score">
-                                <span t-esc="pair.left_option"/>
-                            </div>
-                        </t>
+                        <!-- Placeholder for left options -->
+                        <div class="o_match_item">Option 1</div>
+                        <div class="o_match_item">Option 2</div>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <h5>Match With</h5>
                     <div class="o_match_answers">
-                        <t t-foreach="question.match_following_pairs" t-as="pair">
-                            <div class="o_match_item" t-att-data-pair-id="pair.id" t-att-data-score="pair.score">
-                                <span t-esc="pair.right_option"/>
-                            </div>
-                        </t>
+                        <!-- Placeholder for right options -->
+                        <div class="o_match_item">Answer 1</div>
+                        <div class="o_match_item">Answer 2</div>
                     </div>
                 </div>
             </div>
-            <input type="hidden" t-att-name="'question_' + str(question.id)" value="[]"/>
+            <input type="hidden" name="match_following_result" value="[]"/>
         </div>
     </template>
     
-    <!-- Add match following handling to the survey form -->
-    <template id="survey_match_following_question" inherit_id="survey.question_container">
-        <!-- Use a more generic XPath that should exist in the parent template -->
-        <xpath expr="//div[hasclass('o_survey_question')]" position="inside">
-            <t t-if="question.question_type == 'match_following'">
-                <t t-call="custom_elearn.match_following_question_template"/>
-            </t>
-        </xpath>
-    </template>
-    
-    <!-- Add CSS for match following -->
-    <template id="match_following_assets" inherit_id="survey.layout">
-        <xpath expr="//head" position="inside">
+    <!-- Add CSS for match following directly into the layout -->
+    <template id="assets_common_minimal" inherit_id="web.assets_common">
+        <xpath expr="." position="inside">
             <style>
                 .match_following_container { padding: 15px; background-color: #f8f9fa; border-radius: 4px; margin-bottom: 20px; }
                 .o_match_questions, .o_match_answers { min-height: 150px; border: 1px dashed #ccc; padding: 10px; border-radius: 4px; background-color: #fff; }
