Enhance survey match following functionality; add state management for user input, update answer handling, and introduce answer type for match following. Include JavaScript for improved interaction in templates.

--- a/views/survey_match_templates.xml
+++ b/views/survey_match_templates.xml
@@ -40,6 +40,7 @@
                 .o_match_item.matched { background-color: #d4edda; border-color: #c3e6cb; }
                 .drop-zone-active { background-color: #e8f4ff; border-color: #b8daff; }
             </style>
+            <script type="text/javascript" src="/custom_elearn/static/src/js/survey_match_following.js"></script>
         </xpath>
     </template>
     
