--- a/views/survey_match_templates.xml
+++ b/views/survey_match_templates.xml
@@ -2,13 +2,16 @@
 <odoo>
     <!-- Define a standalone template for match following questions -->
     <template id="match_following_question_template">
-        <div class="js_match_following match_following_container" t-att-data-question-id="question.id">
+        <div class="js_match_following match_following_container" 
+             t-att-data-question-id="question.id">
             <div class="row">
                 <div class="col-md-6">
                     <h5>Items</h5>
                     <div class="o_match_questions">
                         <t t-foreach="question.match_following_pairs" t-as="pair">
-                            <div class="o_match_item" t-att-data-pair-id="pair.id" t-att-data-score="pair.score">
+                            <div class="o_match_item" 
+                                 t-att-data-pair-id="pair.id" 
+                                 t-att-data-score="pair.score">
                                 <span t-esc="pair.left_option"/>
                             </div>
                         </t>
@@ -18,18 +21,25 @@
                     <h5>Match With</h5>
                     <div class="o_match_answers">
                         <t t-foreach="question.match_following_pairs" t-as="pair">
-                            <div class="o_match_item" t-att-data-pair-id="pair.id" t-att-data-score="pair.score">
+                            <div class="o_match_item" 
+                                 t-att-data-pair-id="pair.id" 
+                                 t-att-data-score="pair.score">
                                 <span t-esc="pair.right_option"/>
                             </div>
                         </t>
                     </div>
                 </div>
             </div>
-            <input type="hidden" t-att-name="'question_' + str(question.id)" value="[]"/>
+            <input type="hidden" 
+                   t-att-name="'question_' + str(question.id)"
+                   t-att-value="user_input_line.value_match_following if user_input_line else '[]'"/>
+            <div class="mt-2">
+                <p class="text-muted">Drag items from the left column to match with items in the right column.</p>
+            </div>
         </div>
     </template>
     
-    <!-- Add CSS for match following directly into survey layout -->
+    <!-- Add CSS and JavaScript for match following -->
     <template id="survey_layout_extend" inherit_id="survey.layout">
         <xpath expr="//head" position="inside">
             <style>
@@ -40,27 +50,6 @@
                 .o_match_item.matched { background-color: #d4edda; border-color: #c3e6cb; }
                 .drop-zone-active { background-color: #e8f4ff; border-color: #b8daff; }
             </style>
-            <script type="text/javascript" src="/custom_elearn/static/src/js/survey_match_following.js"></script>
         </xpath>
-    </template>
-    
-    <!-- Add a demo route to test match following questions -->
-    <template id="survey_demo_page">
-        <t t-call="website.layout">
-            <div class="container mt-4">
-                <h1>Match Following Demo</h1>
-                <div class="card">
-                    <div class="card-body">
-                        <t t-if="question">
-                            <h3 t-esc="question.title"/>
-                            <t t-call="custom_elearn.match_following_question_template"/>
-                        </t>
-                        <t t-else="">
-                            <div class="alert alert-info">No match following questions found.</div>
-                        </t>
-                    </div>
-                </div>
-            </div>
-        </t>
     </template>
 </odoo>
