--- a/views/survey_match_templates.xml
+++ b/views/survey_match_templates.xml
@@ -1,41 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
-    <!-- Include our JavaScript in the survey layout -->
+    <!-- Simply inject our script into survey layout -->
     <template id="survey_layout_match_following" inherit_id="survey.layout">
         <xpath expr="//head" position="inside">
             <script type="text/javascript" src="/custom_elearn/static/src/js/survey_match_following.js"/>
         </xpath>
-    </template>
-
-    <!-- Template for rendering a match following question -->
-    <template id="question_match_following_content" name="Survey: Match Following Question Content">
-        <div class="match_following_container js_match_following" t-att-data-question-id="question.id">
-            <div class="row">
-                <div class="col-md-6">
-                    <h5>Items</h5>
-                    <div class="o_match_questions">
-                        <t t-foreach="question.match_following_pairs" t-as="pair">
-                            <div class="o_match_item" t-att-data-pair-id="pair.id" t-att-data-score="pair.score">
-                                <span t-esc="pair.left_option"/>
-                            </div>
-                        </t>
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <h5>Match With</h5>
-                    <div class="o_match_answers">
-                        <t t-foreach="question.match_following_pairs" t-as="pair">
-                            <div class="o_match_item" t-att-data-pair-id="pair.id" t-att-data-score="pair.score">
-                                <span t-esc="pair.right_option"/>
-                            </div>
-                        </t>
-                    </div>
-                </div>
-            </div>
-            <input type="hidden" t-att-name="'question_' + str(question.id)" t-att-value="user_input_line.value_match_following if user_input_line else '[]'"/>
-            <div class="mt-2">
-                <p class="text-muted small">Drag items from the left column to match with items in the right column.</p>
-            </div>
-        </div>
     </template>
 </odoo>
