--- a/views/survey_match_templates.xml
+++ b/views/survey_match_templates.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
-    <!-- Inject scripts directly into the survey layout template -->
+    <!-- Inject our test script directly into the survey layout -->
     <template id="survey_match_assets" inherit_id="survey.layout">
         <xpath expr="//head" position="inside">
-            <script type="text/javascript" src="/custom_elearn/static/src/js/survey_match_following.js"></script>
-            <script type="text/javascript" src="/custom_elearn/static/src/js/survey_match_debug.js"></script>
+            <script type="text/javascript" src="/custom_elearn/static/src/js/survey_match_direct_test.js"/>
         </xpath>
     </template>
 </odoo>
