--- a/views/survey_match_templates.xml
+++ b/views/survey_match_templates.xml
@@ -1,16 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
-    <!-- Include our JavaScript in the survey layout -->
+    <!-- Simply include our JavaScript in survey layout -->
     <template id="survey_match_assets" inherit_id="survey.layout">
         <xpath expr="//head" position="inside">
-            <script type="text/javascript" src="/custom_elearn/static/src/js/survey_match_following.js"></script>
+            <script type="text/javascript" src="/custom_elearn/static/src/js/survey_match_following.js"/>
         </xpath>
-    </template>
-    
-    <!-- Simple template for match following question -->
-    <template id="match_following_question_template" name="Match Following Question">
-        <div class="js_match_question" data-question-type="match_following">
-            <!-- Match following content will be added by JS -->
-        </div>
     </template>
 </odoo>
