--- a/views/survey_match_templates.xml
+++ b/views/survey_match_templates.xml
@@ -26,9 +26,38 @@
         </div>
     </template>
 
-    <template id="survey_layout_match_following" inherit_id="survey.layout">
+    <!-- Include our JavaScript in the survey layout -->
+    <template id="survey_layout_assets" inherit_id="survey.layout">
         <xpath expr="//head" position="inside">
             <script type="text/javascript" src="/custom_elearn/static/src/js/survey_match_following.js"/>
+            <style>
+                /* Basic styles for match following */
+                .match_following_container {
+                    margin: 15px 0;
+                    padding: 15px;
+                    background-color: #f8f9fa;
+                    border-radius: 4px;
+                }
+                .match_left_items, .match_right_items {
+                    min-height: 150px;
+                    padding: 10px;
+                    border: 1px dashed #ccc;
+                    border-radius: 4px;
+                    background-color: #fff;
+                    margin-bottom: 10px;
+                }
+                .match_item {
+                    padding: 10px;
+                    margin: 5px 0;
+                    background-color: #fff;
+                    border: 1px solid #ddd;
+                    border-radius: 4px;
+                    cursor: pointer;
+                }
+                .match_left_items .match_item {
+                    cursor: grab;
+                }
+            </style>
         </xpath>
     </template>
 </odoo>
